# halo2-test

./: Cargo.toml
src/: accumulator.rs  accumulator_ecdsa.rs  accumulator_wrong.rs  eigen.rs  lib.rs  main.rs  plot.rs  simple.rs
src/ecdsa/: mod.rs  native.rs
src/poseidon/: mod.rs  native.rs  params.rs  sbox.rs  sponge.rs  transcript.rs  wrong.rs
src/poseidon/native/: mod.rs  sponge.rs
src/poseidon/params/: bn254_10x5.rs  bn254_5x5.rs  mod.rs
