[package]
name = "halo2-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/appliedzkp/halo2.git", features = ["dev-graph"] }
plotters = { version = "0.3.0" }
ff = "0.11"
rand_core = { version = "0.6", default-features = false }