[package]
name = "halo2-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_06_03", features = ["dev-graph"] }
plotters = { version = "0.3.0" }
ff = "0.11"
rand = "0.8"
group = "0.11"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
ecdsa = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", default-features = false, features = ["kzg"] }
ecc = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", default-features = false, features = ["kzg"] }
integer = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", default-features = false, features = ["kzg"] }
secp256k1 = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", default-features = false, features = ["kzg"] }
maingate = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", default-features = false, features = ["kzg"] }
plonk-verifier = { git = "https://github.com/han0110/plonk-verifier.git", default-features = false }